# pincher_arm

./: LICENSE  README.md
phantomx_pincher_arm/: CMakeLists.txt  package.xml
phantomx_pincher_arm_bringup/: CMakeLists.txt  package.xml
phantomx_pincher_arm_bringup/config/: arm.yaml  gripper.yaml
phantomx_pincher_arm_bringup/launch/: arm.launch
phantomx_pincher_arm_description/: CMakeLists.txt  package.xml
phantomx_pincher_arm_description/urdf/: arm_hardware.xacro  pincher_arm.urdf.xacro  pincher_arm.xacro
phantomx_pincher_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phantomx_pincher_arm_moveit_config/config/: pincher_arm.srdf
phantomx_pincher_arm_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  pincher_arm_moveit.launch  pincher_arm_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
pincher_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
pincher_arm_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
pincher_arm_bringup/config/: arm.yaml  gripper_controller.yaml  gripper_transmission.yaml
pincher_arm_bringup/launch/: arm.launch  driver.launch
pincher_arm_bringup/scripts/: fake_joint_pub  gripper_controller  gripper_transmission
pincher_arm_control/: CMakeLists.txt  package.xml
pincher_arm_control/config/: joy_teleop.yaml  servo_server.yaml
pincher_arm_control/launch/: teleop.launch
pincher_arm_control/scripts/: pincher_group_position_controller
pincher_arm_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
pincher_arm_description/meshes/: README.md
pincher_arm_description/urdf/: arm_hardware.xacro  pincher_arm.urdf.xacro  pincher_arm.xacro
pincher_arm_ikfast_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  pincher_arm_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
pincher_arm_ikfast_plugin/src/: pincher_arm_arm_ikfast_moveit_plugin.cpp  pincher_arm_arm_ikfast_solver.cpp
pincher_arm_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
pincher_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pincher_arm.srdf
pincher_arm_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  pincher_arm_moveit.launch  pincher_arm_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
pincher_arm_moveit_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
pincher_arm_moveit_demos/src/: pick_place.cpp
