<?xml version="1.0"?>
<package format="2">
  <name>phantomx_pincher_arm</name>
  <version>0.0.0</version>
  <description>
    The phantomx_pincher_arm metapackage.
  </description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>phantomx_pincher_arm_bringup</exec_depend>
  <exec_depend>phantomx_pincher_arm_description</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
