<?xml version="1.0"?>
<package format="2">
  <name>phantomx_pincher_arm_description</name>
  <version>0.0.0</version>
  <description>
    URDF Description package for PhantomX Pincher arm
  </description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  
</package>
