<?xml version="1.0"?>
<package format="2">
  <name>pincher_arm</name>
  <version>0.0.0</version>
  <description>
    The pincher_arm metapackage.
  </description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pincher_arm_bringup</exec_depend>
  <exec_depend>pincher_arm_description</exec_depend>
  <exec_depend>pincher_arm_moveit_config</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
