cmake_minimum_required(VERSION 3.0.2)
project(pincher_arm_bringup)

find_package(catkin REQUIRED)

catkin_package()

install(DIRECTORY config
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)

install(DIRECTORY launch
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)

catkin_install_python(PROGRAMS
  scripts/fake_joint_pub
  scripts/gripper_controller
  scripts/gripper_transmission
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)