<?xml version="1.0"?>
<package format="2">
  <name>pincher_arm_bringup</name>
  <version>0.0.0</version>
  <description>
    Launch files for starting PhantomX Pincher arm drivers.
  </description>

  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>arbotix_python</exec_depend>
  <exec_depend>arbotix_controllers</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
