<?xml version="1.0"?>
<package format="2">
  <name>pincher_arm_control</name>
  <version>0.0.0</version>
  <description>
    Launch files for starting PhantomX Pincher arm drivers.
  </description>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
