<?xml version="1.0"?>
<package format="2">
  <name>pincher_arm_description</name>
  <version>0.0.0</version>
  <description>
    URDF Description package for PhantomX Pincher arm
  </description>

  <author>Michael Ferguson</author>
  <author>Melonee Wise</author>
  <author>Błażej Sowa</author>

  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  
</package>
