<?xml version="1.0"?>
<package format="2">
  <name>pincher_arm_description</name>
  <version>0.2.0</version>
  <description>
    URDF Description package for PhantomX Pincher arm
  </description>

  <author>Michael Ferguson</author>
  <author>Melonee Wise</author>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>BSD</license>
  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  
</package>
