<?xml version="1.0"?>
<package format="2">
  <name>pincher_arm_moveit_demos</name>
  <version>0.0.0</version>
  <description>
    Moveit demos for the PhantomX Pincher arm.
  </description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
