<?xml version="1.0"?>
<package format="2">
  <name>pincher_arm_moveit_demos</name>
  <version>0.1.1</version>
  <description>
    Moveit demos for the PhantomX Pincher arm.
  </description>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
